- Minor fixes - File class added

--- a/DotNetClone/DotNetClone.vcxproj.filters
+++ b/DotNetClone/DotNetClone.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="FileStream.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="File.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h">
@@ -60,6 +63,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="FileStream.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="File.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="FileTools.h">
