--- a/DotNetClone/DotNetClone.vcxproj
+++ b/DotNetClone/DotNetClone.vcxproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -115,6 +115,7 @@
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="Convert.cpp" />
     <ClCompile Include="DateTime.cpp" />
+    <ClCompile Include="File.cpp" />
     <ClCompile Include="FileStream.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="String.cpp" />
@@ -125,8 +126,9 @@
     <ClInclude Include="Console.h" />
     <ClInclude Include="Convert.h" />
     <ClInclude Include="DateTime.h" />
-    <ClInclude Include="FileTools.h" />
+    <ClInclude Include="File.h" />
     <ClInclude Include="FileStream.h" />
+    <ClInclude Include="FileTools.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="TimeSpan.h" />
