--- a/DotNetClone/DotNetClone.vcxproj
+++ b/DotNetClone/DotNetClone.vcxproj
@@ -76,11 +76,11 @@
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UndefinePreprocessorDefinitions>%(UndefinePreprocessorDefinitions)</UndefinePreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\include;C:\Users\greis\Documents\Visual Studio 2015\Projects\mysql++-3.2.3\lib;C:\Program Files (x86)\MySQL\MySQL Connector C 6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>mysqlcppconn.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mysqlcppconn.lib;mysqlpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -88,12 +88,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C 6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;MYSQLPP_NO_DLL;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>mysqlcppconn.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files\MySQL\MySQL Connector C 6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libmysql.lib;wsock32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -146,6 +147,8 @@
     <ClCompile Include="MySqlConnection.cpp" />
     <ClCompile Include="MySqlDataAdapter.cpp" />
     <ClCompile Include="MySqlDataReader.cpp" />
+    <ClCompile Include="MySqlParameter.cpp" />
+    <ClCompile Include="MySqlParameterCollection.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Short.cpp" />
     <ClCompile Include="SqlCommand.cpp" />
@@ -178,6 +181,8 @@
     <ClInclude Include="MySqlConnection.h" />
     <ClInclude Include="MySqlDataAdapter.h" />
     <ClInclude Include="MySqlDataReader.h" />
+    <ClInclude Include="MySqlParameter.h" />
+    <ClInclude Include="MySqlParameterCollection.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Short.h" />
     <ClInclude Include="SqlCommand.h" />
