- MySqlClient now supports prepared statements (only Long and Var_String) - Hidden Constructor for DataRow (only DataTable and DataRowCollection allowed) - enum MySqlDbTypes maps enum_field_types

--- a/DotNetClone/DotNetClone.vcxproj
+++ b/DotNetClone/DotNetClone.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="MySqlConnection.h" />
     <ClInclude Include="MySqlDataAdapter.h" />
     <ClInclude Include="MySqlDataReader.h" />
+    <ClInclude Include="MySqlDbTypes.h" />
     <ClInclude Include="MySqlParameter.h" />
     <ClInclude Include="MySqlParameterCollection.h" />
     <ClInclude Include="Object.h" />
