--- a/DotNetClone/DotNetClone.vcxproj
+++ b/DotNetClone/DotNetClone.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{07ECFA81-9CBF-4EA5-A8CB-8F9CB1F39DF5}</ProjectGuid>
     <RootNamespace>DotNetClone</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>DNC</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
