--- a/DNC/DNC.vcxproj
+++ b/DNC/DNC.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{07ECFA81-9CBF-4EA5-A8CB-8F9CB1F39DF5}</ProjectGuid>
-    <RootNamespace>DotNetClone</RootNamespace>
+    <RootNamespace>DNC</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <ProjectName>DNC</ProjectName>
   </PropertyGroup>
@@ -77,10 +77,10 @@
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UndefinePreprocessorDefinitions>%(UndefinePreprocessorDefinitions)</UndefinePreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\include;C:\Users\greis\Documents\Visual Studio 2015\Projects\mysql++-3.2.3\lib;C:\Program Files (x86)\MySQL\MySQL Connector C 6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\mysql\include;C:\Users\greis\Documents\Visual Studio 2015\Projects\mysql++-3.2.3\lib;C:\Program Files (x86)\MySQL\MySQL Connector C 6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>mysqlcppconn.lib;mysqlpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -105,13 +105,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\boost_include;C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\mysql\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CPPCONN_PUBLIC_FUNC=;mysqlcppconn_EXPORTS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DotNetClone\DotNetClone\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\greis\Documents\Visual Studio 2015\Projects\DNC\DNC\mysql\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>mysqlcppconn-static.lib;mysqlcppconn.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
