--- a/DNC/DNC.vcxproj
+++ b/DNC/DNC.vcxproj
@@ -39,7 +39,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -123,7 +123,8 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C 6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -157,6 +158,7 @@
     <ClCompile Include="MySqlParameterCollection.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Short.cpp" />
+    <ClCompile Include="Socket.cpp" />
     <ClCompile Include="SqlCommand.cpp" />
     <ClCompile Include="SqlConnection.cpp" />
     <ClCompile Include="SqlDataReader.cpp" />
@@ -196,6 +198,7 @@
     <ClInclude Include="MySqlParameterCollection.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Short.h" />
+    <ClInclude Include="Socket.h" />
     <ClInclude Include="SqlCommand.h" />
     <ClInclude Include="SqlConnection.h" />
     <ClInclude Include="SqlDataReader.h" />
