--- a/DNC/DNC.vcxproj
+++ b/DNC/DNC.vcxproj
@@ -143,10 +143,13 @@
     <ClCompile Include="DateTime.cpp" />
     <ClCompile Include="Decimal.cpp" />
     <ClCompile Include="Double.cpp" />
+    <ClCompile Include="EndPoint.cpp" />
     <ClCompile Include="File.cpp" />
     <ClCompile Include="FileStream.cpp" />
     <ClCompile Include="Float.cpp" />
     <ClCompile Include="Integer.cpp" />
+    <ClCompile Include="IPAddress.cpp" />
+    <ClCompile Include="IPEndPoint.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="Long.cpp" />
     <ClCompile Include="LongLong.cpp" />
@@ -170,6 +173,7 @@
     <ClCompile Include="ULong.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AddressFamily.h" />
     <ClInclude Include="Boolean.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Convert.h" />
@@ -181,11 +185,14 @@
     <ClInclude Include="DateTime.h" />
     <ClInclude Include="Decimal.h" />
     <ClInclude Include="Double.h" />
+    <ClInclude Include="EndPoint.h" />
     <ClInclude Include="File.h" />
     <ClInclude Include="FileStream.h" />
     <ClInclude Include="FileTools.h" />
     <ClInclude Include="Float.h" />
     <ClInclude Include="Integer.h" />
+    <ClInclude Include="IPAddress.h" />
+    <ClInclude Include="IPEndPoint.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Long.h" />
     <ClInclude Include="LongLong.h" />
@@ -197,8 +204,10 @@
     <ClInclude Include="MySqlParameter.h" />
     <ClInclude Include="MySqlParameterCollection.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ProtocolType.h" />
     <ClInclude Include="Short.h" />
     <ClInclude Include="Socket.h" />
+    <ClInclude Include="SocketType.h" />
     <ClInclude Include="SqlCommand.h" />
     <ClInclude Include="SqlConnection.h" />
     <ClInclude Include="SqlDataReader.h" />
