--- a/DNC/DNC.vcxproj.filters
+++ b/DNC/DNC.vcxproj.filters
@@ -141,6 +141,15 @@
     <ClCompile Include="NetworkStream.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="TcpListener.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Serializable.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TestDataClass.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h">
@@ -282,6 +291,15 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="NetworkStream.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TcpListener.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Serializable.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TestDataClass.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
