--- a/DNC/DNC.vcxproj.filters
+++ b/DNC/DNC.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="TestDataClass.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="XmlSerializer.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h">
@@ -303,6 +306,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Dictionary.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="XmlSerializer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
